--- a/index.html
+++ b/index.html
@@ -5,11 +5,31 @@
         <title>Robson Rodrigo Dev</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet"> 
     </head>
     <body>
-        <header></header>
+        <header>
+            <nav>
+                <img src="img/rrdev1.jpg" alt="Foto de Robson Rodrigo Cruz">            
+                <ul>
+                    <li><a href="">Sobre</a></li>
+                    <li><a href="">Formação</a</li>
+                    <li><a href="">Experiências</a</li>
+                    <li><a href="">Conhecimentos</a</li>
+                    <li><a href="">Projetos</a></li>
+                </ul>
+            </nav>
+        </header>
         <main></main>
-        <footer></footer>
+        <footer>
+            <div class="rodape">
+                <img src="img/rrdev2.png" alt="">
+                <h1>Desenvolvido por rrDev&copy</h1>
+            </div>
+        </footer>
     </body>
 
 </html>
