Ajustes na tag nav ul com a inclusao da classe lista-nav

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <nav>
                 <img src="img/rrdev2.png" alt="Foto de Robson Rodrigo Cruz">       
-                <ul>
+                <ul class="lista-nav">
                     <li><a href="index.html">Sobre</a></li>
                     <li><a href="formacao.html">Formação</a</li>
                     <li><a href="experiencia.html">Experiências</a</li>
