--- a/experiencia.html
+++ b/experiencia.html
@@ -31,22 +31,22 @@
             <div class="sobre">
                 <h1 class="titulo-sobre">Experiências Profissionais</h1>
                 
-                <ul class="experiencia">
-                    <li class="cargo">Desenvolvedor Jr.</li>
-                    <li class="empresa">AGV Health & Nutrition</li>
+                <ul class="informacoes">
+                    <li class="nome">Desenvolvedor Jr.</li>
+                    <li class="empresa">AGV Health & Nutrition/ Solistica</li>
                     <li class="periodo">fev de 2020 - abr de 2021 · 1 ano 3 meses</li>
                     <li class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</li>
                 </ul>
 
-                <ul class="experiencia">
-                    <li class="cargo">Analista de suporte II</li>
+                <ul class="informacoes">
+                    <li class="nome">Analista de suporte II</li>
                     <li class="empresa">Global Hitss</li>
                     <li class="periodo">jun de 2015 - ago de 2019 · 4 anos 3 meses</li>
                     <li class="descricao">Administração de chamados e atendimento ao cliente com suporte técnico de nível I e II em software e hardware. Identificação de problemas através do código fonte (Delphi e C#). Consultas e alterações no Banco de Dados (SQLServer) viabilizando a solução dos problemas em nível I e II.</li>
                 </ul>
 
-                <ul class="experiencia">
-                    <li class="cargo">Analista de sistema</li>
+                <ul class="informacoes">
+                    <li class="nome">Analista de sistema</li>
                     <li class="empresa">GeoMob Soluções e Conteúdo Digital Ltda</li>
                     <li class="periodo">fev de 2013 - mai de 2015 · 2 anos 4 meses</li>
                     <li class="descricao">Responsável pelo desenvolvimento de todo o conteúdo multimídia e informativo das aplicações, além de atuar auxiliando no gerenciamento dos projetos, documentação e melhorias do código (html, css, JavaScript e SQL).</li>
