--- a/formacao.html
+++ b/formacao.html
@@ -29,8 +29,16 @@
         
         <main>
             <div class="sobre">
-                <h1 class="titulo-sobre">Formação</h1>                    
-                <p>Texto aqui!</p>            
+                <h1 class="titulo-sobre">Formação Acadêmica</h1>
+
+                <ul class="informacoes">
+                    <li class="nome">Gestão da Tecnologia da Informação</li>
+                    <li class="empresa">Fatec Itu</li>
+                    <li class="periodo">2011 - 2014</li>
+                    <li class="descricao">O curso aborda disciplinas das áreas de informática e gestão, que têm como base a matemática. Dentro de computação, o estudante aprende linguagem de programação, desenvolvimento de softwares e implementação de sistema de banco de dados, entre outros conteúdos. Já no campo gerencial, estuda administração, contabilidade, finanças, economia, negócios, marketing, gestão de pessoas e gestão da produção, por exemplo.</li>
+                    <li class="fonte">Fonte: <a href="https://fatecitu.edu.br/portal/cursos/gestao-tecnologia-da-informacao/">( fatecitu.edu.br/ )</a></li>
+
+                </ul>         
             </div>
         <main>
         
