--- a/projetos.html
+++ b/projetos.html
@@ -5,6 +5,7 @@
         <title>Robson Rodrigo Dev</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/e657a0e530.js" crossorigin="anonymous"></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +31,25 @@
         <main>
             <div class="sobre">
                 <h1 class="titulo-sobre">Projetos</h1>
-                <p>Texto aqui!</p>
+                
+                <ul class="informacoes">
+                    <li><a href="https://floydiscografia.netlify.app/index.html"><img class="imagem" src="img/floydiscografia.png" alt=""></a></li>
+                    <li><a class="github" href="https://github.com/rrcruz83/floydiscografia"><i class="fa-brands fa-square-github"></i></a></li>
+                    <li class="nome">Floydiscografia</li>
+                    <li class="site"><a href="https://floydiscografia.netlify.app/index.html">https://floydiscografia.netlify.app/index.html</a></li>
+                    <li class="descricao">A ideia inicial é que a principio o site seja apenas um projeto visual feito em html e css catalogando toda a minha coleção do Pink Floyd. 
+                    <li class="descricao">Numa segunda fase quero evoluí-lo trazendo os dados dos meus albuns através de uma api json, utilizado JavaScript.</li>
+                    <li class="descricao">Já numa terceira fase a ideia é criar um banco de dados com todas as informações e imagens do site, que serão tratados inteiramente no back end, provavelmente em node.js e demosntrado no front através de uma api.</li> 
+                </ul>
+
+                <ul class="informacoes">
+                    <li><a href="https://universoasimov.netlify.app/index.html"><img class="imagem" src="img/universo-asimov.png" alt=""></a></li>
+                    <li><a class="github" href="https://github.com/rrcruz83/universo-asimov"><i class="fa-brands fa-square-github"></i></a></li>
+                    <li class="nome">Universo Asimov</li>
+                    <li class="site"><a href="https://universoasimov.netlify.app/index.html">https://universoasimov.netlify.app/index.html</a></li>
+                    <li class="descricao">Um site enciclopédia feito em html e css sobre o universo dos livros de Isaac Asimov e sobre o autor. A ideia é que com mais conhecimento esse projeto a longo prazo se torne uma wiki brasileira sobre o universo Asimov, mais especificamente uma wiki das séries Robôs, Império e Fundação.</li>   
+                </ul>
+
             </div>
         <main>
         
