Ajustes na tela inicial index.html

--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
                 <p>Desenvolvedor Jr/Pleno</p>
 
                 <ul class="informacoes">
-                    <li class="descricao">Atuo na área de TI desde 2013.</li>
-                    <li class="descricao">Sou Desenvolvedor Jr/Pleno. Apesar de já ter tido experiências com back end, meu objetivo hoje é me especializar apenas em front end.</li> 
-                    <li class="descricao">O objetivo desse site é que ele seja um currículo/portifólio das minhas experiências e projetos. Além de ser um projeto em andamento para aprendizado, com o desenvolvimento, inclusão de novas linguagens e metodologias, conforme eu adquira mais conhecimento.</li>
+                    <li class="descricao">Seja muito bem vindo ao meu site de apresentação pessoal!</li>
+                    <li class="descricao">O objetivo desse site é que ele seja um currículo/portifólio das minhas experiências e projetos. Além de ser um projeto em andamento para aprendizado e conhecimento, fazendo uso de novas linguagens, tecnologias e metodologias conforme eu adquira mais conhecimento.</li>
+                    <li class="descricao">Sou Desenvolvedor Jr/Pleno e atuo na área de TI desde 2013.</li>
+                    <li class="descricao">Já tive experiências como Analista de sistemas, Analista de Suporte e Desenvolvedor back end e front end.</li>
+                    <li class="descricao">No momento meu objetivo é me especializar apenas em front end.</li> 
+                    <li class="descricao">Essas são algumas de minhas redes sociais:</li> 
+                    
                     <li class="redes-sociais">
                         <a href="https://github.com/rrcruz83"><i class="fa-brands fa-square-github"></i></a>
                         <a href="https://www.linkedin.com/in/robson-rodrigo-cruz-57358817a/"><i class="fa-brands fa-linkedin"></i></a>
