Alterações na imagem e no texto da tela de Formação Acadêmica formacao.html

--- a/formacao.html
+++ b/formacao.html
@@ -32,7 +32,7 @@
                 <h1 class="titulo-sobre">Formação Acadêmica</h1>
 
                 <ul class="informacoes">
-                    <li class="imagem"><img src="img/fatec.png" alt=""></li>
+                    <li class="emp"><img src="img/fatec.png" alt=""></li>
                     <li class="nome">Gestão da Tecnologia da Informação</li>
                     <li class="empresa">Fatec Itu - Graduação</li>
                     <li class="periodo">2011 - 2014</li>
