Ajustes em erros de escrita da tela de projetos.html

--- a/projetos.html
+++ b/projetos.html
@@ -38,8 +38,8 @@
                     <li class="nome">Floydiscografia</li>
                     <li class="site"><a href="https://floydiscografia.netlify.app/index.html">https://floydiscografia.netlify.app/index.html</a></li>
                     <li class="descricao">A ideia inicial é que a principio o site seja apenas um projeto visual feito em html e css catalogando toda a minha coleção do Pink Floyd. 
-                    <li class="descricao">Numa segunda fase quero evoluí-lo trazendo os dados dos meus albuns através de uma api json, utilizado JavaScript.</li>
-                    <li class="descricao">Já numa terceira fase a ideia é criar um banco de dados com todas as informações e imagens do site, que serão tratados inteiramente no back end, provavelmente em node.js e demosntrado no front através de uma api.</li> 
+                    <li class="descricao">Numa segunda fase quero evoluí-lo trazendo os dados dos meus albuns através de uma api json, utilizando JavaScript.</li>
+                    <li class="descricao">Já numa terceira fase a ideia é criar um banco de dados com todas as informações e imagens do site, que serão tratados inteiramente no back end, provavelmente em node.js e apresentado no front através de uma api.</li> 
                 </ul>
 
                 <ul class="informacoes">
