Ajustes nas imagens e no texto da tela de Experiencias Profissionais experiencia.html

--- a/experiencia.html
+++ b/experiencia.html
@@ -32,13 +32,15 @@
                 <h1 class="titulo-sobre">Experiências Profissionais</h1>
                 
                 <ul class="informacoes">
+                    <li class="emp"><img src="img/solistica.png" alt=""></li>
                     <li class="nome">Desenvolvedor Jr.</li>
                     <li class="empresa">AGV Health & Nutrition/ Solistica</li>
                     <li class="periodo">fev de 2020 - abr de 2021 · 1 ano 3 meses</li>
-                    <li class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</li>
+                    <li class="descricao">Atuando com desenvolvimento, refatoração e manutenção de APIs e Sistemas com arquitetura de microsserviços. Stack: Laravel, Lumen e VueJs.</li>
                 </ul>
 
                 <ul class="informacoes">
+                    <li class="emp"><img src="img/hitss.jpeg" alt=""></li>
                     <li class="nome">Analista de suporte II</li>
                     <li class="empresa">Global Hitss</li>
                     <li class="periodo">jun de 2015 - ago de 2019 · 4 anos 3 meses</li>
@@ -46,6 +48,7 @@
                 </ul>
 
                 <ul class="informacoes">
+                    <li class="emp"><img src="img/geomob.jpeg" alt=""></li>
                     <li class="nome">Analista de sistema</li>
                     <li class="empresa">GeoMob Soluções e Conteúdo Digital Ltda</li>
                     <li class="periodo">fev de 2013 - mai de 2015 · 2 anos 4 meses</li>
