--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
         <main>
             <div class="sobre">
                 <h1>Robson Rodrigo Cruz</h1>
+                <img class="banner" src="img/banner.jpg" alt="">
                 <p>Desenvolvedor Jr/Pleno</p>
-
+                
                 <ul class="informacoes">
                     <li class="descricao">Seja muito bem vindo ao meu site de apresentação pessoal!</li>
                     <li class="descricao">O objetivo desse site é que ele seja um currículo/portifólio das minhas experiências e projetos. Além de ser um projeto em andamento para aprendizado e conhecimento, fazendo uso de novas linguagens, tecnologias e metodologias conforme eu adquira mais conhecimento.</li>
                     <li class="descricao">Sou Desenvolvedor Jr/Pleno e atuo na área de TI desde 2013.</li>
-                    <li class="descricao">Já tive experiências como Analista de sistemas, Analista de Suporte e Desenvolvedor back end e front end.</li>
-                    <li class="descricao">No momento meu objetivo é me especializar apenas em front end.</li> 
+                    <li class="descricao">Já tive experiências como Analista de sistemas, Analista de Suporte e Desenvolvedor back-end e front-end.</li>
+                    <li class="descricao">No momento meu objetivo é me especializar apenas em front-end.</li> 
                     <li class="descricao">Essas são algumas de minhas redes sociais:</li> 
                     
                     <li class="redes-sociais">
