--- a/projetos.html
+++ b/projetos.html
@@ -36,7 +36,7 @@
                     <li><a href="https://floydiscografia.netlify.app/index.html"><img class="imagem" src="img/floydiscografia.png" alt=""></a></li>
                     <li><a class="github" href="https://github.com/rrcruz83/floydiscografia"><i class="fa-brands fa-square-github"></i></a></li>
                     <li class="nome">Floydiscografia</li>
-                    <li class="site"><a href="https://floydiscografia.netlify.app/index.html">https://floydiscografia.netlify.app/index.html</a></li>
+                    <li class="site"><a href="https://floydiscografia.netlify.app/index.html">floydiscografia.netlify.app</a></li>
                     <li class="descricao">A ideia inicial é que a principio o site seja apenas um projeto visual feito em html e css catalogando toda a minha coleção do Pink Floyd. 
                     <li class="descricao">Numa segunda fase quero evoluí-lo trazendo os dados dos meus albuns através de uma api json, utilizando JavaScript.</li>
                     <li class="descricao">Já numa terceira fase a ideia é criar um banco de dados com todas as informações e imagens do site, que serão tratados inteiramente no back end, provavelmente em node.js e apresentado no front através de uma api.</li> 
@@ -46,7 +46,7 @@
                     <li><a href="https://universoasimov.netlify.app/index.html"><img class="imagem" src="img/universo-asimov.png" alt=""></a></li>
                     <li><a class="github" href="https://github.com/rrcruz83/universo-asimov"><i class="fa-brands fa-square-github"></i></a></li>
                     <li class="nome">Universo Asimov</li>
-                    <li class="site"><a href="https://universoasimov.netlify.app/index.html">https://universoasimov.netlify.app/index.html</a></li>
+                    <li class="site"><a href="https://universoasimov.netlify.app/index.html">universoasimov.netlify.app</a></li>
                     <li class="descricao">Um site enciclopédia feito em html e css sobre o universo dos livros de Isaac Asimov e sobre o autor. A ideia é que com mais conhecimento esse projeto a longo prazo se torne uma wiki brasileira sobre o universo Asimov, mais especificamente uma wiki das séries Robôs, Império e Fundação.</li>   
                 </ul>
 
