Ajustes na disponibilização dos cursos de Desenvolvimento Front-end

--- a/conhecimento.html
+++ b/conhecimento.html
@@ -39,20 +39,30 @@
                 </ul>
 
                 <ul class="informacoes">
-                    <li class="descricao">&#11824; Formação Front-end</li>
-                    <li class="pontos">&#8594; HTML5 e CSS3 parte 1: crie uma página da Web (Jun);</li>
-                    <li class="pontos">&#8594; HTML5 e CSS3 parte 2: posicionamento, listas e navegação (Jun);</li>
-                    <li class="pontos">&#8594; HTML5 e CSS3 parte 3: trabalhando com formulários e tabelas (Jun);</li>
-                    <li class="pontos">&#8594; HTML5 e CSS3 parte 4: avançando no CSS (Jul);</li>
-                    <li class="pontos">&#8594; Acessibilidade web parte 1: tornando seu front-end inclusivo (Ago);</li>
-                    <li class="pontos">&#8594; Arquitetura CSS: descomplicando os problemas(Ago);</li>
-                    <li class="pontos">&#8594; Flexbox: posicione elementos na tela (Set)</li>
+                    <li class="descricao">&#11824; HTML e CSS </li>
+                    <li class="pontos">&#8594; HTML5 e CSS3 parte 1: crie uma página da Web (Jun 22);</li>
+                    <li class="pontos">&#8594; HTML5 e CSS3 parte 2: posicionamento, listas e navegação (Jun 22);</li>
+                    <li class="pontos">&#8594; HTML5 e CSS3 parte 3: trabalhando com formulários e tabelas (Jun 22);</li>
+                    <li class="pontos">&#8594; HTML5 e CSS3 parte 4: avançando no CSS (Jul 22);</li>
+                    <li class="pontos">&#8594; Acessibilidade web parte 1: tornando seu front-end inclusivo (Ago 22);</li>
+                    <li class="pontos">&#8594; CSS: dispondo elementos com Flexbox e Grid (Set 22);</li>
+                    <li class="pontos">&#8594; HTML e CSS: praticando HTML/CSS (Out 22);</li>
+                    <li class="pontos">&#8594; HTML e CSS: responsividade com mobile-first (Out 22);</li>
+                    <li class="pontos">&#8594; Arquitetura CSS: descomplicando os problemas(Out 22);</li>
+                    <li class="pontos">&#8594; SEO: otimização de sites (Nov22);</li>
+                    <li class="pontos">&#8594; Flexbox: posicione elementos na tela (Nov 22);</li>
+                    <li class="pontos">&#8594; Layouts Responsivos: trabalhando com layouts mobile (Nov 22);</li>
+                    <li class="pontos">&#8594; CSS Grid: simplificando layouts (Nov 22);</li>
+
+                    <li class="descricao">&#11824; JavaScript</li>
+                    <li class="pontos">&#8594; JavaScript para Web: Crie páginas dinâmicas (Dez 22);</li>
+                    <li class="pontos">&#8594; JavaScript: manipulando o DOM (Dez 22);</li>
+                    <li class="pontos">&#8594; JavaScript na Web: armazenando dados no navegador (Dez 22);</li>
                     
                     <!--
 
-                    <li class="pontos">&#8594; Layouts Responsivos: trabalhando com layouts mobile;</li>
-                    <li class="pontos">&#8594; JavaScript para Web: Crie páginas dinâmicas;</li>
-                    <li class="pontos">&#8594; Expressões regulares: capturando textos de forma mágica;</li>
+                    <li class="pontos">&#8594; JavaScript: validações e reconhecimento de voz;</li>
+                    <li class="pontos">&#8594; JavaScript: consumindo e tratando dados de uma API ;</li>
                     <li class="pontos">&#8594; JavaScript na Web: validação de Formulários e HTML5;</li>
                     
                     -->
