Ajustes nos caminhos das pastas agora com asset/

--- a/experiencia.html
+++ b/experiencia.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Robson Rodrigo Dev</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/css/reset.css">
+        <link rel="stylesheet" href="assets/css/style.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
     <body>
         <header>
             <nav>
-                <img src="img/rrdev2.png" alt="Foto de Robson Rodrigo Cruz">       
+                <img src="assets/img/rrdev2.png" alt="Foto de Robson Rodrigo Cruz">       
                 <ul class="lista-nav">
                     <li><a href="index.html">Sobre</a></li>
                     <li><a href="formacao.html">Formação</a</li>
@@ -32,7 +32,7 @@
                 <h1 class="titulo-sobre">Experiências Profissionais</h1>
                 
                 <ul class="informacoes">
-                    <li class="emp"><img src="img/solistica.png" alt=""></li>
+                    <li class="emp"><img src="assets/img/solistica.png" alt=""></li>
                     <li class="nome">Desenvolvedor Jr.</li>
                     <li class="empresa">AGV Health & Nutrition/ Solistica</li>
                     <li class="periodo">fev de 2020 - abr de 2021 · 1 ano 3 meses</li>
@@ -40,7 +40,7 @@
                 </ul>
 
                 <ul class="informacoes">
-                    <li class="emp"><img src="img/hitss.jpeg" alt=""></li>
+                    <li class="emp"><img src="assets/img/hitss.jpeg" alt=""></li>
                     <li class="nome">Analista de suporte II</li>
                     <li class="empresa">Global Hitss</li>
                     <li class="periodo">jun de 2015 - ago de 2019 · 4 anos 3 meses</li>
@@ -48,7 +48,7 @@
                 </ul>
 
                 <ul class="informacoes">
-                    <li class="emp"><img src="img/geomob.jpeg" alt=""></li>
+                    <li class="emp"><img src="assets/img/geomob.jpeg" alt=""></li>
                     <li class="nome">Analista de sistema</li>
                     <li class="empresa">GeoMob Soluções e Conteúdo Digital Ltda</li>
                     <li class="periodo">fev de 2013 - mai de 2015 · 2 anos 4 meses</li>
