--- a/formacao.html
+++ b/formacao.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Robson Rodrigo Dev</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/css/reset.css">
+        <link rel="stylesheet" href="assets/css/style.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
     <body>
         <header>
             <nav>
-                <img src="img/rrdev2.png" alt="Foto de Robson Rodrigo Cruz">       
+                <img src="assets/img/rrdev2.png" alt="Foto de Robson Rodrigo Cruz">       
                 <ul class="lista-nav">
                     <li><a href="index.html">Sobre</a></li>
                     <li><a href="formacao.html">Formação</a</li>
@@ -32,7 +32,7 @@
                 <h1 class="titulo-sobre">Formação Acadêmica</h1>
 
                 <ul class="informacoes">
-                    <li class="emp"><img src="img/fatec.png" alt=""></li>
+                    <li class="emp"><img src="assets/img/fatec.png" alt=""></li>
                     <li class="nome">Gestão da Tecnologia da Informação</li>
                     <li class="empresa">Fatec Itu - Graduação</li>
                     <li class="periodo">2011 - 2014</li>
