--- a/conhecimento.html
+++ b/conhecimento.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Robson Rodrigo Dev</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/css/reset.css">
+        <link rel="stylesheet" href="assets/css/style.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
     <body>
         <header>
             <nav>
-                <img src="img/rrdev2.png" alt="Foto de Robson Rodrigo Cruz">       
+                <img src="assets/img/rrdev2.png" alt="Foto de Robson Rodrigo Cruz">       
                 <ul class="lista-nav">
                     <li><a href="index.html">Sobre</a></li>
                     <li><a href="formacao.html">Formação</a</li>
@@ -32,7 +32,7 @@
                 <h1 class="titulo-sobre">Cursos e Conhecimentos</h1>
 
                 <ul class="informacoes">
-                    <li class="emp"><img src="img/front.jpeg" alt=""></li>
+                    <li class="emp"><img src="assets/img/front.jpeg" alt=""></li>
                     <li class="nome">Desenvolvimento front-end (HTML, CSS e JavaScript).</li>
                     <li class="empresa">Alura</li>
                     <li class="periodo">ago de 2019 - dez de 2019 e jun 2022 até o momento (73h ...)</li>
@@ -69,7 +69,7 @@
                 </ul>
 
                 <ul class="informacoes">
-                    <li class="emp"><img src="img/github.jpeg" alt=""></li>
+                    <li class="emp"><img src="assets/img/github.jpeg" alt=""></li>
                     <li class="nome">Git e Github</li>
                     <li class="empresa">Alura</li>
                     <li class="periodo">mai de 2022 (12h)</li>
@@ -78,7 +78,7 @@
                 </ul>
 
                 <ul class="informacoes">
-                    <li class="emp"><img src="img/linux.png" alt=""></li>
+                    <li class="emp"><img src="assets/img/linux.png" alt=""></li>
                     <li class="nome">Linux</li>
                     <li class="empresa">Alura</li>
                     <li class="periodo">mar de 2022 (12h)</li>
@@ -87,7 +87,7 @@
                 </ul>
 
                 <ul class="informacoes">
-                    <li class="emp"><img src="img/php-logo.jpeg" alt=""></li>
+                    <li class="emp"><img src="assets/img/php-logo.jpeg" alt=""></li>
                     <li class="nome">Desenvolvimento Back-end (PHP, Laravel e Lumen)</li>
                     <li class="empresa">Alura</li>
                     <li class="periodo">jan de 2020 - ago de 2020 (64h)</li>
@@ -107,7 +107,7 @@
                 </ul>
 
                 <ul class="informacoes">
-                    <li class="emp"><img src="img/logica.png" alt=""></li>
+                    <li class="emp"><img src="assets/img/logica.png" alt=""></li>
                     <li class="nome">Lógica de programação</li>
                     <li class="empresa">Alura</li>
                     <li class="periodo">ago de 2019 (10h)</li>
@@ -116,7 +116,7 @@
                 </ul>
 
                 <ul class="informacoes">
-                    <li class="emp"><img src="img/sql.png" alt=""></li>
+                    <li class="emp"><img src="assets/img/sql.png" alt=""></li>
                     <li class="nome">SQL e Banco de Dados Relacionais</li>
                     <li class="empresa">Alura</li>
                     <li class="periodo">mar de 2017 - ago de 2017 (24h)</li>
@@ -125,7 +125,7 @@
                 </ul>
                 
                 <ul class="informacoes">
-                    <li class="emp"><img src="img/scrum.png" alt=""></li>
+                    <li class="emp"><img src="assets/img/scrum.png" alt=""></li>
                     <li class="nome">Fundamentos do Scrum</li>
                     <li class="empresa">TI.exames</li>
                     <li class="periodo">2013 (4h)</li>
