--- a/projetos.html
+++ b/projetos.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Robson Rodrigo Dev</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/css/reset.css">
+        <link rel="stylesheet" href="assets/css/style.css">
         <script src="https://kit.fontawesome.com/e657a0e530.js" crossorigin="anonymous"></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +14,7 @@
     <body>
         <header>
             <nav>
-                <img src="img/rrdev2.png" alt="Foto de Robson Rodrigo Cruz">       
+                <img src="assets/img/rrdev2.png" alt="Foto de Robson Rodrigo Cruz">       
                 <ul class="lista-nav">
                     <li><a href="index.html">Sobre</a></li>
                     <li><a href="formacao.html">Formação</a</li>
@@ -33,7 +33,7 @@
                 <h1 class="titulo-sobre">Projetos</h1>
                 
                 <ul class="informacoes">
-                    <li><a href="https://floydiscografia.netlify.app/index.html"><img class="imagem" src="img/floydiscografia.png" alt=""></a></li>
+                    <li><a href="https://floydiscografia.netlify.app/index.html"><img class="imagem" src="assets/img/floydiscografia.png" alt=""></a></li>
                     <li><a class="github" href="https://github.com/rrcruz83/floydiscografia"><i class="fa-brands fa-square-github"></i></a></li>
                     <li class="nome">Floydiscografia</li>
                     <li class="site"><a href="https://floydiscografia.netlify.app/index.html">floydiscografia.netlify.app</a></li>
@@ -43,7 +43,7 @@
                 </ul>
 
                 <ul class="informacoes">
-                    <li><a href="https://universoasimov.netlify.app/index.html"><img class="imagem" src="img/universo-asimov.png" alt=""></a></li>
+                    <li><a href="https://universoasimov.netlify.app/index.html"><img class="imagem" src="assets/img/universo-asimov.png" alt=""></a></li>
                     <li><a class="github" href="https://github.com/rrcruz83/universo-asimov"><i class="fa-brands fa-square-github"></i></a></li>
                     <li class="nome">Universo Asimov</li>
                     <li class="site"><a href="https://universoasimov.netlify.app/index.html">universoasimov.netlify.app</a></li>
