Ajustes finais da refatoração pra quando a tela for maior que 1024px

--- a/experiencia.html
+++ b/experiencia.html
@@ -47,7 +47,7 @@
             <section class="informacoes">
                 <p class="logo-info"><img src="assets/img/geomob.jpeg" alt=""></p>
                 <p class="nome-info">Analista de sistema</p>
-                <p class="empresa-info">GeoMob Soluções e Conteúdo Digital Ltda</p>
+                <p class="empresa-info">GeoMob - Soluções e Conteúdo Digital Ltda</p>
                 <p class="periodo-info">fev de 2013 - mai de 2015 · 2 anos 4 meses</p>
                 <p class="descricao-info">Responsável pelo desenvolvimento de todo o conteúdo multimídia e informativo das aplicações, além de atuar auxiliando no gerenciamento dos projetos, documentação e melhorias do código (html, css, JavaScript e SQL).</p>
             </section>
