--- a/projetos.html
+++ b/projetos.html
@@ -28,12 +28,11 @@
         </nav>
         <main class="principal">
             <h1>Projetos</h1>
-            
             <section class="informacoes">
                 <p class="box_imagem_site-info"><a href="https://floydiscografia.netlify.app/index.html"><img class="imagem_site-info" src="assets/img/floydiscografia.png" alt=""></a></p>
-                <p class="nome-info">Floydiscografia</p>
+                <p class="nome-info">Discografia Pink Floyd</p>
                 <p class="icone_github-info"><a href="https://github.com/rrcruz83/floydiscografia"><i class="fa-brands fa-square-github"></i></a></p>
-                <p class="site-info"><a href="https://floydiscografia.netlify.app/index.html">floydiscografia.netlify.app</a></p>
+                <p class="site-info"><a href="https://floydiscografia.netlify.app/index.html">.netlify.app</a></p>
                 <p class="descricao-info">A ideia inicial é que a principio o site seja apenas um projeto visual feito em html e css catalogando toda a minha coleção do Pink Floyd. 
                 <p class="descricao-info">Numa segunda fase quero evoluí-lo trazendo os dados dos meus albuns através de uma api json, utilizando JavaScript.</p>
                 <p class="descricao-info">Já numa terceira fase a ideia é criar um banco de dados com todas as informações e imagens do site, que serão tratados inteiramente no back end, provavelmente em node.js e apresentado no front através de uma api.</p> 
@@ -42,7 +41,7 @@
                 <p class="box_imagem_site-info"><a href="https://universoasimov.netlify.app/index.html"><img class="imagem_site-info" src="assets/img/universo-asimov.png" alt=""></a></p>
                 <p class="nome-info">Universo Asimov</p>
                 <p class="icone_github-info"><a class="icone_github-info" href="https://github.com/rrcruz83/universo-asimov"><i class="fa-brands fa-square-github"></i></a></p>
-                <p class="site-info"><a href="https://universoasimov.netlify.app/index.html">universoasimov.netlify.app</a></p>
+                <p class="site-info"><a href="https://universoasimov.netlify.app/index.html">.netlify.app</a></p>
                 <p class="descricao-info">Um site enciclopédia feito em html e css sobre o universo dos livros de Isaac Asimov e sobre o autor. A ideia é que com mais conhecimento esse projeto a longo prazo se torne uma wiki brasileira sobre o universo Asimov, mais especificamente uma wiki das séries Robôs, Império e Fundação.</p>   
             </section>
         </main>
