Ajustes na classe menu_navegacao_ativo para que ela não venha setada ao abrir a pagina

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <img class="banner" src="assets/img/banner.jpg" alt="">
     
-    <nav class="menu_navegacao menu_navegacao_ativo">
+    <nav class="menu_navegacao">
         <img class="menu_navegacao_logo" src="assets/img/rrdev2.png" alt="Imagem de Robson Rodrigo Cruz">
         <a class="menu_navegacao_link" href="index.html">Sobre</a>
         <a class="menu_navegacao_link" href="formacao.html">Formação</a>
