Alteração no nome do arquivo js e na estrutura de pastas js

--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
     <footer>
         <h1 class="copyright">Desenvolvido por rrDev&copy</h1>
     </footer>
-    <script src="index.js"></script>    
+    <script src="js/main.js"></script>    
 </body>
 </html>
