--- a/formacao.html
+++ b/formacao.html
@@ -40,6 +40,6 @@
         <footer>
             <h1 class="copyright">Desenvolvido por rrDev&copy</h1>
         </footer>
-        <script src="index.js"></script>        
+        <script src="js/main.js"></script>        
     </body>
 </html>
