--- a/projetos.html
+++ b/projetos.html
@@ -48,7 +48,7 @@
         <footer>
             <h1 class="copyright">Desenvolvido por rrDev&copy</h1>
         </footer>
-        <script src="index.js"></script>
+        <script src="js/main.js"></script>
     </body>
 
 </html>
